# AI_AGENT-GCT

./: .gitattributes  .gitignore  COLUMN_EXTRACTION_PLAN.md  COPY_FRA_TRAINEDDATA.bat  EXEMPLE_FORMAT_JSON.md  EXTRACTION_SPECIFICATIONS_V2_STRICT_REPORT.md  IMPLEMENTATION_SUMMARY.md  INSTALL_FRA.bat  INSTALL_TESSERACT.bat  MOVE_FRA_TRAINEDDATA.bat  QUICK_START.md  README.md  README_EXECUTION.md  README_SPECIFICATIONS_EXTRACTION.md  REFACTORING_EXECUTION_PLAN.md  REFACTORING_PLAN_REVISED.md  REFACTORING_REPORT.md  REFACTORING_SUCCESS_REPORT.md  REQUIREMENTS_CHECKLIST.md  RUN_INSTALL_FRA_AS_ADMIN.bat  SECOND_COLUMN_EXTRACTION.md  SECOND_COLUMN_EXTRACTION_CONDENSED.md  SESSION_STATUS_V3_START.md  SIMPLIFICATION_OUTPUTS.md  TEST_COMPARISON_REPORT.md  V3_ARCHITECTURE_PLAN.md  copy_fra_traineddata.ps1  debug_alignment.py  extract_specifications_v3_generalized.py  install_fra.ps1  install_fra.vbs  install_tesseract.ps1  move_fra_traineddata.py  pyproject.toml  requirements.txt  run.bat  run_specs.bat  setup_tesseract.py  test_full_extraction.py  test_header_detection.py  (+5 more)
docs/: CHANGELOG.md  HEADER_DETECTION_UPDATE.md  INDEX_DOCUMENTATION.md
scripts/: compare_selectors.py  debug_column2_structure.py  debug_regex.py  detailed_new_analysis.py  generate_extraction_report.py  inspect_selection.py  show_specifications.py  test_column2_debug.py  test_column_extraction.py  test_on_first_pdf.py  validate_column2_extraction.py  visual_debug_column2.py  visualize_table_structure.py
src/: clean_ocr.py  cleanup_competing_files.py  column2_extractor_fixed.py  column2_extractor_v2.py  (+13 more)
(+84 files in other folders)
